// Copyright 2023 XigXog
//
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.
//
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package kubefox.proto.v1;

import "google/protobuf/struct.proto";
import "opentelemetry/proto/trace/v1/trace.proto";

option go_package = "github.com/xigxog/kubefox/core";

enum Category {
  UNKNOWN = 0;
  ACK = 1;
  MESSAGE = 2;
  REQUEST = 3;
  RESPONSE = 4;
}

message Component {
  string type = 1;
  string app = 2;
  string name = 3;
  string commit = 4;
  string id = 5;
  string broker_id = 6;
}

message EventContext {
  string platform = 1;
  string virtual_environment = 2;
  string app_deployment = 3;
  string release_manifest = 4;
  opentelemetry.proto.trace.v1.Span trace_parent = 5;
}

// message SpanContext {
//   bytes trace_id = 1;
//   bytes span_id = 2;
//   string trace_flags = 3;
//   fixed32 flags = 16;
// }

message Event {
  string id = 1;
  string parent_id = 2;

  string type = 3;
  Category category = 4;

  // Unix time in µs
  int64 create_time = 5;
  // TTL in µs
  int64 ttl = 6;

  EventContext context = 7;
  Component source = 8;
  Component target = 9;

  map<string, google.protobuf.Value> params = 10;
  map<string, google.protobuf.Value> values = 11;

  repeated opentelemetry.proto.trace.v1.Span spans = 12;

  string content_type = 14;
  bytes content = 15;
}

message MatchedEvent {
  Event event = 1;
  int64 route_id = 2;
  map<string, google.protobuf.Value> env = 3;
}
